// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon-size prop 1`] = `
<div class="win-grid win-hairline--top">
  <div class="win-grid-item" style="flex-basis: 25%;">
    <div class="win-grid-item__content win-grid-item__content--center win-hairline"><i class="win-icon win-icon-success win-grid-item__icon" style="font-size: 10px;">
        <!----></i></div>
  </div>
</div>
`;

exports[`render icon-slot 1`] = `
<div class="win-grid win-hairline--top">
  <div class="win-grid-item" style="flex-basis: 25%;">
    <div class="win-grid-item__content win-grid-item__content--center win-hairline">
      <div class="win-grid-item__icon-wrapper">
        <div></div>
        <div class="win-info">1</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`sqaure and set gutter 1`] = `
<div class="win-grid" style="padding-left: 10rem;">
  <div class="win-grid-item win-grid-item--square" style="flex-basis: 50%; padding-top: 50%;">
    <div class="win-grid-item__content win-grid-item__content--center win-grid-item__content--square win-grid-item__content--surround win-hairline" style="right: 10rem; bottom: 10rem; height: auto;"></div>
  </div>
  <div class="win-grid-item win-grid-item--square" style="flex-basis: 50%; padding-top: 50%;">
    <div class="win-grid-item__content win-grid-item__content--center win-grid-item__content--square win-grid-item__content--surround win-hairline" style="right: 10rem; bottom: 10rem; height: auto;"></div>
  </div>
  <div class="win-grid-item win-grid-item--square" style="flex-basis: 50%; padding-top: 50%;">
    <div class="win-grid-item__content win-grid-item__content--center win-grid-item__content--square win-grid-item__content--surround win-hairline" style="right: 10rem; bottom: 10rem; height: auto;"></div>
  </div>
</div>
`;
